# BANFF-AID

./: .dockerignore  .gitignore  kpmp-download.py  license.txt  pyproject.toml  readme.md
banff-aid/: Dockerfile  sandbox.py  setup.py
banff-aid/cli/BanffAid/: BanffAid.py  BanffAid.xml
banff-aid/cli/BanffAid/banff_lesion_score/: banff_lesion_score.py
banff-aid/cli/BanffAid/banff_lesion_scores/: banff_lesion_scores.py
banff-aid/cli/BanffAid/report/: report.html
banff-aid/cli/BanffAid/utils/: utils.py
banff_aid/: Dockerfile
banff_aid/cli/: slicer_cli_list.json
banff_aid/cli/BanffAid/: BanffAid.py  BanffAid.xml  BanffAidBatch.py  BanffAidBatch.xml
banff_aid/cli/BanffAid/banff_lesion_score/: banff_lesion_score.py
banff_aid/cli/BanffAid/report/: report.ipynb
banff_aid/cli/BanffAid/utils/: mask_to_xml.py  utils.py  xml_to_json.py
banff_aid/features/banff_lesion_scores/: Dockerfile  setup.py
banff_aid/features/banff_lesion_scores/ci/cli/interstitial_fibrosis/: interstitial_fibrosis.py
banff_aid/features/banff_lesion_scores/cli/BanffAid/: BanffAid.py  BanffAid.xml
banff_aid/features/banff_lesion_scores/cli/BanffAid/banff_lesion_scores/: banff_lesion_scores.py
banff_aid/features/banff_lesion_scores/cli/BanffAid/utils/: utils.py
banff_aid/features/banff_lesion_scores/ct/cli/tubular_atrophy/: tubular_atrophy.py
banff_aid/features/banff_lesion_scores/cv/cli/arteriosclerosis/: arteriosclerosis.py
banff_aid/features/banff_lesion_scores/gs/: Dockerfile
banff_aid/features/banff_lesion_scores/gs/cli/glomerulosclerosis/: glomerulosclerosis.py
obx-utils/: README.md
sandbox/: README.md  bls.py  sandbox.py
sandbox/annotations/: arteries_arterioles.json  cortical_interstitium.json  globally_sclerotic_glomeruli.json  non_globally_sclerotic_glomeruli.json  tubules.json
