[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "banff-aid"
version = "0.1.0"
description = "BANFF-AID: Banff Automated Nephrology Feature Framework - Artificial Intelligence Diagnosis"
readme = "readme.md"
license = {file = "license.txt"}
authors = [
    { name = "Dženan Zukić", email = "dzenan.zukic@kitware.com" },
    { name = "David Manthey", email = "david.manthey@kitware.com" },
    { name = "Austin Allen", email = "austin.allen@kitware.com" },
]
keywords = [
    "banff", "AI", "diagnosis", "kidney", "transplant", "nephrology", "digital pathology"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.9"
dependencies = [
    "Pillow>=9.0.1",
    "python-docx==1.2.0",
    "girder-client==3.2.8",
    "large_image==1.32.6",
    "numpy==1.26.4",
    "scipy==1.15.2",
    "scikit-image==0.25.2",
    "svglib==1.5.1",
    "tqdm",
]
[project.urls]
"Repository" = "https://github.com/Kitware/BANFF-AID"

[tool.setuptools.packages.find]
exclude = ["logs","training"]

[tool.black]
line-length = 120  # Default 88 is a bit too short.
target-version = ['py311']
